--- a/localization/en.json
+++ b/localization/en.json
@@ -239,9 +239,10 @@
   "navigation.admin.admin-settings": "Admin Settings",
   "navigation.myTradeCriteria": "My Trade Criteria",
   "navigation.myNetworkAll": "All ({value})",
-  "navigation.myNetworkActive": "Active ({value})",
+  "navigation.myNetworkConnected": "Connected ({value})",
   "navigation.myNetworkPending": "Pending ({value})",
-  "navigation.myNetworkRequested": "Requested ({value})",
+  "navigation.myNetworkDeclined": "Declined ({value})",
+  "navigation.myNetworkDisconnected": "Disconnected ({value})",
   "navigation.myNetwork": "My Network",
   "dwolla.controllerTitlePopup": "Please read below for the definition of Controller in this context.",
   "dwolla.paymentPoweredBy": "Echo Global Chemical Exchange payment gateway is powered by:",
