--- a/localization/en.json
+++ b/localization/en.json
@@ -2987,8 +2987,8 @@
   "dashboard.totalUsersCount.title": "Users",
   "dashboard.totalProductOffers.title": "Product Offers",
   "dasboard.sales.graph.title": "Total Sum Of Sales Monthly",
-  "dasboard.companyPurchase.graph.title": "Company Sum Of Purchases Monthly",
-  "dasboard.companySales.graph.title": "Company Sum Of Sales Monthly",
+  "dasboard.companyPurchase.graph.title": "Purchase Activity",
+  "dasboard.companySales.graph.title": "Sales Activity",
   "dasboard.sales.graph.subtitle": "in thousand dollars",
   "dasboard.companiesUser.title": "COMPANIES BY USERS",
   "dasboard.companiesProducts.title": "COMPANIES BY PRODUCTS",
