DT-376 Dashboard captions update - Super Admin section.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2986,7 +2986,7 @@
   "dashboard.totalBroadcastedValueWithoutMilion.title": "Broadcasted",
   "dashboard.totalUsersCount.title": "Users",
   "dashboard.totalProductOffers.title": "Product Offers",
-  "dasboard.sales.graph.title": "Total Sum Of Sales Monthly",
+  "dasboard.sales.graph.title": "Sales Activity",
   "dasboard.companyPurchase.graph.title": "Purchase Activity",
   "dasboard.companySales.graph.title": "Sales Activity",
   "dasboard.sales.graph.subtitle": "in thousand dollars",
