DT-376 Dashboard captions update - Super Admin section.
# Conflicts:
#	localization/en.json

--- a/localization/en.json
+++ b/localization/en.json
@@ -2986,9 +2986,9 @@
   "dashboard.totalBroadcastedValueWithoutMilion.title": "Broadcasted",
   "dashboard.totalUsersCount.title": "Users",
   "dashboard.totalProductOffers.title": "Product Offers",
-  "dasboard.sales.graph.title": "Total Sum Of Sales Monthly",
-  "dasboard.companyPurchase.graph.title": "Company Sum Of Purchases Monthly",
-  "dasboard.companySales.graph.title": "Company Sum Of Sales Monthly",
+  "dasboard.sales.graph.title": "Sales Activity",
+  "dasboard.companyPurchase.graph.title": "Purchase Activity",
+  "dasboard.companySales.graph.title": "Sales Activity",
   "dasboard.sales.graph.subtitle": "in thousand dollars",
   "dasboard.companiesUser.title": "COMPANIES BY USERS",
   "dasboard.companiesProducts.title": "COMPANIES BY PRODUCTS",
