DT-366 Added company type selection in add/edit company.

--- a/localization/en.json
+++ b/localization/en.json
@@ -1157,6 +1157,9 @@
   "company.update": "Update",
   "company.remove": "Remove",
   "company.add": "Add",
+  "company.companyType": "Company Type",
+  "company.regular": "Regular",
+  "company.broker": "Broker",
   "confirm.editOrAddNew.header": "Edit or Add New",
   "confirm.editOrAddNew.content": "If you like to continue editing this product offer by adding documents, price tiers, or price book rules, click Edit. If you would like to add a new Inventory Item, click New.",
   "confirm.deleteNmfcNumber.header": "Delete NMFC Number",
