DT-387 Added Shared Listings View.

--- a/localization/en.json
+++ b/localization/en.json
@@ -180,6 +180,7 @@
   "navigation.inventory": "Inventory",
   "navigation.orders": "Orders",
   "navigation.inventoryMyListings": "My Listings",
+  "navigation.inventorySharedListings": "Shared Listings",
   "navigation.inventoryMyProducts": "My Products",
   "navigation.inventoryGlobalPriceBook": "Global Price Book",
   "navigation.addInventory": "Add Inventory",
@@ -1331,6 +1332,14 @@
   "myInventory.acceptBids": "Accept bids on offer?",
   "myInventory.whoShouldSee": "Who should see this offer?",
   "myInventory.listingShare": "Enable Listing Share for this offer?",
+  "sharedListings.internalProductName": "Internal Product Name",
+  "sharedListings.seller": "Seller",
+  "sharedListings.packaging": "Packaging",
+  "sharedListings.availablePkgs": "Available PKGs",
+  "sharedListings.quantity": "Quantity",
+  "sharedListings.location": "Location",
+  "sharedListings.cost": "Cost",
+  "sharedListings.price": "Price",
   "filter.warehouse": "Warehouse",
   "filter.incomplete": "Incomplete",
   "filter.chemicalProductName": "Chemical / Product Name",
@@ -2791,6 +2800,7 @@
   "title.settings.locations": "Locations",
   "title.settings.tradeCriteria": "Trade Criteria",
   "title.inventory.myListings": "My Listings",
+  "title.inventory.sharedListings": "Shared Listings",
   "title.inventory.myProducts": "My Products",
   "title.inventory.globalPriceBook": "Global Price Book",
   "title.companies.users": "Users",
