--- a/localization/en.json
+++ b/localization/en.json
@@ -3303,5 +3303,11 @@
   "myNetworks.inviteModal.placeholder": "Enter TradePass ID",
   "myNetworks.inviteModal.errorLabel": "No member was found in this TradePass ID",
   "myNetworks.inviteModal.content": "Sending an invite to a member will allow that member to see your TradePass and allow that member to add you to their network.",
-  "settings.user.purchaseAuthorized.notify": "User will be emailed link to submit their signature. Signature will be valid for 12 months from date of signing. Status pending until a signature has been submitted"
+  "settings.user.purchaseAuthorized.notify": "User will be emailed link to submit their signature. Signature will be valid for 12 months from date of signing. Status pending until a signature has been submitted",
+  "sharedListings.detailRow.seller": "SELLER",
+  "sharedListings.detailRow.messageSeller": "Message Seller",
+  "sharedListings.detailRow.tradePass": "Trade Pass",
+  "detailRow.pricing.bag": "{titleNumbers} bag",
+  "detailRow.pricing.markup": "Markup",
+  "sharedListings.detailRow.enterMarkup": "Enter Markup"
 }
