--- a/localization/en.json
+++ b/localization/en.json
@@ -143,6 +143,23 @@
   "admin.editLogisticsProvider": "Edit Logistics Provider",
   "admin.addCarrier": "Add Carrier",
   "admin.editCarrier": "Edit Carrier",
+  "bluePallet.accessNetwork": "Access our entire network of sellers",
+  "bluePallet.anonymousBuying": "Anonymous Buying",
+  "bluePallet.anonymouslySell": "Anonymously Sell to our entire network of buyers",
+  "bluePallet.buyerBenefits": "Buyer Benefits",
+  "bluePallet.direct": "direct",
+  "bluePallet.footerInfo": "BluePallet Direct only displays inventory of BluePallet Members. BluePallet Direct does not manufacture, distribute, or possess any products listed on the BluePallet Direct Marketplace. BluePallet Direct will facilitate transactions and returns as outlined SimpleTrade, Inc.’s Terms of use.",
+  "bluePallet.freeReturns": "Free Returns*",
+  "bluePallet.insuredAR": "100% Insured AR",
+  "bluePallet.netPayments": "NET10 Payments",
+  "bluePallet.safe": "Safe",
+  "bluePallet.secure": "Secure",
+  "bluePallet.simple": "Simple",
+  "bluePallet.supplySide": "Supply Side Protections",
+  "bluePallet.verifiedBuyers": "TradePass Verified Buyers",
+  "bluePallet.verifiedSellers": "TradePass Verified Sellers",
+  "bluePallet.whatIs": "What is BluePallet Direct?",
+  "bluePallet.whatIs.answer": "BluePallet Direct anonymously displays selected inventory on our direct feed for all qualified members on the BluePallet platform to view and purchase. Selling and buying inventory through BluePallet Direct comes with industry leading perks. Built in Supply side protections and buyer benefits ensures that BluePallet direct transactions are safe, secure, simple, and reliable.",
   "broadcast.byRegion": "Regions",
   "broadcast.byCompany": "Companies",
   "broadcast.controls": "Broadcast Controls",
