--- a/localization/en.json
+++ b/localization/en.json
@@ -3312,5 +3312,5 @@
   "sharedListings.detailRow.enterMarkup": "Enter Markup",
   "sharedListings.detailRow.tabInfo": "Info",
   "sharedListings.detailRow.purchaseInfo": "Purchase Info",
-  "sharedListings.detailRow.productInfo": "Product Info"
+  "sharedListings.detailRow.productInfo": "Product Information"
 }
