DT-247 Company Details Page - Instagram and Twitter input fields update to accept tags.

--- a/localization/en.json
+++ b/localization/en.json
@@ -1147,9 +1147,9 @@
   "company.socialFacebook": "Facebook",
   "company.enter.socialFacebookUrl": "Enter Facebook URL",
   "company.socialTwitter": "Twitter",
-  "company.enter.socialTwitterUrl": "Enter Twitter URL",
+  "company.enter.socialTwitterUrl": "Enter Twitter tag",
   "company.socialInstagram": "Instagram",
-  "company.enter.socialInstagramUrl": "Enter Instagram URL",
+  "company.enter.socialInstagramUrl": "Enter Instagram tag",
   "company.emailAddress": "Email Address",
   "company.enterEmailAddress": "Enter Email Address",
   "company.recommendedImage": "Recommended image in transparent PNG format",
