DT-395 Updated Checkout/Freight Selection section on Custom Freight.

--- a/localization/en.json
+++ b/localization/en.json
@@ -1749,14 +1749,15 @@
   "cart.ownFreight": "Own Freight",
   "cart.externalNotes": "External Notes",
   "cart.shippingQuoteId": "Shipping Quote ID",
+  "cart.enterShippingQuoteId": "Enter Shipping Quote ID",
   "cart.shipmentQuote.enter": "Enter Shipment Quote",
   "cart.summary": "Summary",
   "cart.totalItems": "Total Items: {count}",
   "cart.weightLimitExceeded.header": "We are sorry, but no matching Shipping Quotes were provided by logistics company.",
-  "cart.weightLimitExceeded.content": "Your order weight exceeds weight limit {limit} for automatic shipping quotes. Your shipping quote needs to be processed manually. If you wish to continue, click the 'Request Shipping Quote' button. Information about your order will be received by Echo team, who will send you an email with Quote Id.",
-  "cart.palletLimitExceeded.content": "Your order pallet exceeds pallet limit {limit} for automatic shipping quotes. Your shipping quote needs to be processed manually. If you wish to continue, click the 'Request Shipping Quote' button. Information about your order will be received by Echo team, who will send you an email with Quote Id.",
+  "cart.weightLimitExceeded.content": "Your order weight exceeds weight limit {limit} for automatic shipping quotes. Your shipping quote needs to be processed manually. If you wish to continue, click the 'Request Shipping Quote' button. Our logistics provider will create a custom freight quote for your order and we'll notify you when it's ready.",
+  "cart.palletLimitExceeded.content": "Your order pallet exceeds pallet limit {limit} for automatic shipping quotes. Your shipping quote needs to be processed manually. If you wish to continue, click the 'Request Shipping Quote' button. Our logistics provider will create a custom freight quote for your order and we'll notify you when it's ready.",
   "cart.selectWhOrAddress": "Please, select delivery address or warehouse first.",
-  "cart.quoteReceived": "If you already received the shipping quote and agree, please type in the provide Shipping Quote Id and continue with Checkout.",
+  "cart.quoteReceived": "If you have already received a quote ID you may enter it below to continue checking out",
   "cart.requestShippingQuote": "Request Shipping Quote",
   "cart.InfoHeader": "1. Product Information",
   "cart.productName": "Product Name:",
@@ -1802,7 +1803,7 @@
   "cart.nothing": "Please, first select a shipping destination Warehouse or Delivery Address.",
   "cart.noShippingQuotes": "We are sorry, but no matching Shipping Quotes were provided by logistics company.",
   "cart.noShippingQuotes.processManually.title": "We are sorry, but no matching Shipping Quotes were provided by logistics company.",
-  "cart.noShippingQuotes.processManually": "It was not possible to retrieve any automated shipping quotes for you order. Your shipping quote might need to be processed manually. If you wish to continue, click the 'Request Shipping Quote' button. Information about your order will be received by Echo team, who will send you an email with Quote Id.",
+  "cart.noShippingQuotes.processManually": "It was not possible to retrieve any automated shipping quotes for you order. Your shipping quote may need to be processed manually. If you wish to continue, click the 'Request Shipping Quote' button. Our logistics provider will create a custom freight quote for your order and we'll notify you when it's ready.",
   "cart.carrier": "Carrier",
   "cart.cost": "Cost",
   "cart.etd": "ETD",
@@ -2743,7 +2744,7 @@
   "order.deliveryRemarks.enter": "Enter Delivery Remarks",
   "order.shipperRefNo": "Shipper Reference Number",
   "order.shipperRefNo.enter": "Enter Shipper Reference Number",
-  "order.weightLimitExceeded": "Your order weight exceeds weight limit for automatic shipping quotes. Your shipping quote need to be processed manually. If you wish to continue, click the 'Request Shipping Quote' button. Information about your order will be received by Echo team, who will send you an email with Quote Id.",
+  "order.weightLimitExceeded": "Your order weight exceeds weight limit for automatic shipping quotes. Your shipping quote need to be processed manually. If you wish to continue, click the 'Request Shipping Quote' button. Our logistics provider will create a custom freight quote for your order and we'll notify you when it's ready.",
   "order.quoteReceived": "If you already received the shipping quote and agree, please type in the provided Quote Id and continue with shipping order.",
   "profile.myProfile": "My Profile",
   "profile.avatarPicture": "Avatar Picture",
