DT-154 FE - Customer Management fixes.

--- a/localization/en.json
+++ b/localization/en.json
@@ -1251,6 +1251,10 @@
   "confirm.markOrderAsApproved.content": "Do you really want to mark Order {orderId} as Approved?",
   "confirm.markOrderAsDisapproved.title": "Mark Order as Disapproved?",
   "confirm.markOrderAsDisapproved.content": "Do you really want to mark Order {orderId} as Disapproved?",
+  "confirm.deleteWarehouse.title": "Delete Warehouse",
+  "confirm.deleteWarehouse.content": "Do you really want to delete ''{name}'' Warehouse?",
+  "confirm.deleteCustomer.title": "Delete Customer",
+  "confirm.deleteCustomer.content": "Do you really want to delete ''{name}'' Customer?",
   "confirm.order.actions.shipped.title": "Mark Order as Shipped",
   "confirm.order.actions.shipped.content": "Do you really want to mark order {orderId} as shipped?",
   "confirm.order.actions.shippedNoTracking.title": "Mark Order as Shipped without Tracking ID",
@@ -2485,6 +2489,9 @@
   "settings.documents.selectSharingOption": "Select sharing option",
   "settings.documents.enterIssuerName": "Enter issuer name",
   "settings.tableColumnSettings": "TABLE COLUMN SETTINGS",
+  "settings.customers.addWarehouseFor": "Add Warehouse for {name}",
+  "settings.customers.editWarehouseFor": "Edit Warehouse for {name}",
+  "settings.customers.enterWarehouseName": "Enter Warehouse Name",
   "shippingQuote.header": "Shipping Quote",
   "shippingQuote.shippingQuantity": "Shipping Quantity",
   "shippingQuote.purchase": "Purchase",
