--- a/localization/en.json
+++ b/localization/en.json
@@ -2719,6 +2719,7 @@
   "order.markAsDelivered": "Mark as Delivered",
   "order.transit.description": "This order is being delivered.",
   "order.requestCredit": "Request Credit",
+  "order.dispute": "Dispute",
   "order.returnInTransit": "Mark as Returned",
   "order.delivered.description": "This order is pending review. You need to inspect it and accept, reject or start communication with seller.",
   "order.reviewCreditRequestPurchase.description": "This order is waiting for credit counter offer response. You can accept it, reject or update your Credit Request. Accepting or rejecting the offer will accept/reject the order.",
@@ -2726,6 +2727,10 @@
   "order.reinitiateTransfer": "Reinitiate Transfer",
   "order.reinitiateTransfer.subtitle": "Please select another payment account and Transfer",
   "order.reinitiateTransfer.transfer": "Transfer",
+  "order.openDispute": "Open Dispute",
+  "order.dispute.selectReason": "Please select the reason for disputing this order",
+  "order.dispute.pleaseProvide": "Please provide as much information as you can about this dispute and how you would like it resolved.",
+  "order.dispute.dragAndDrop": "Drag and drop or {link} to upload files",
   "order.enterTrackingId": "Enter Tracking ID",
   "order.trackingId": "Tracking ID",
   "order.related.table": "Related Accounting Documents",
@@ -2782,6 +2787,7 @@
   "order.success": "Success",
   "order.rejected": "Order was successfully rejected",
   "order.reject.enterReasonHere": "Enter reason here:",
+  "order.dispute.enterReasonHere": "Enter reason here...",
   "order.messageningHistory": "Messaging History:",
   "order.messageBuyer": "Message to Buyer",
   "order.acceptedCredit": "Credit was accepted",
