DT-151 - translation constants

--- a/localization/en.json
+++ b/localization/en.json
@@ -2398,7 +2398,12 @@
   "settings.editDeliveryAddress": "Edit Delivery Address",
   "settings.certifications": "Certifications",
   "settings.certifications.dea": "Is this location certified to receive DEA List I chemicals?",
+  "settings.certifications.dea.fileText": "DEA List I",
+  "settings.certifications.isCertifiedToDEA": "Is this location certified to receive DEA List I chemicals?",
+  "settings.certifications.dea.paragraph": "Any location receiving chemicals published on the DEA List I must provide the appropriate certifications before an order can be placed.  You may upload the certifications below for verification.",
   "settings.certifications.taxExempt": "Will this location receive tax exempt purchases? (not applicable for AK, OR, MT, VT or DE)",
+  "settings.certifications.taxExempt.fileText": "State Exempt Certificate",
+  "settings.certifications.taxExemptPurchase": "Will this location receive tax exempt purchases? (not applicable for AK, OR, MT, VT or DE)",
   "settings.contactInfo": "Contact Info",
   "settings.contactEmail": "Contact Email",
   "settings.contactPhone": "Contact Phone",
