--- a/localization/en.json
+++ b/localization/en.json
@@ -1878,6 +1878,7 @@
   "checkout.shipping.searchInput": "Search by Name or Address",
   "checkout.shipping.addAddress": "Add New Address",
   "checkout.shipping.editAddress": "Edit Address",
+  "checkout.shipping.disabledPopupDescription": "A product in this order is not able to be shipped to this location due to regional restrictions set by the vendor. Please select a different address.",
   "checkout.freight.estDelivery": "Est. Delivery",
   "checkout.freight.etd": "ETD",
   "checkout.freight.service": "Service",
