DT-362 - fixes for misspelled texts

--- a/localization/en.json
+++ b/localization/en.json
@@ -330,15 +330,15 @@
   "casProduct.epaTsca": "TSCA",
   "casProduct.epaTsca12b": "TSCA 12(b)",
   "casProduct.epaSaferChoice": "Safer Choice",
-  "casProduct.rtkMassachusettes": "Massachusettes",
+  "casProduct.rtkMassachusetts": "Massachusetts",
   "casProduct.rtkNewJersey": "New Jersey",
-  "casProduct.rtkPennslyvania": "Pennslyvania",
+  "casProduct.rtkPennsylvania": "Pennsylvania",
   "casProduct.rtkIllinois": "Illinois",
   "casProduct.rtkRhodeIsland": "Rhode Island",
   "casProduct.dhsReleaseMinimumConcentration": "Release: Minimum Concentration",
   "casProduct.dhsReleaseScreeningThresholdQuantitie": "Release: Screening Threshold Quantitiees (in pounds)",
   "casProduct.dhsTheftMinimumConcentration": "Theft: Minimum Concentration",
-  "casProduct.dhsTheftScreeningThresholdQuantities": "Theft: Screening Threshold Quantitie",
+  "casProduct.dhsTheftScreeningThresholdQuantities": "Theft: Screening Threshold Quantities",
   "casProduct.dhsSabotageMinimumConcentration": "Sabotage: Minimum Concentration",
   "casProduct.dhsSabotageMinimumConcentrationPercent": "Sabotage: Minimum Concentration",
   "casProduct.dhsSabotageScreeningThresholdQuantities": "Sabotage: Screening Threshold Quantities",
