--- a/localization/en.json
+++ b/localization/en.json
@@ -1360,6 +1360,11 @@
   "myInventory.acceptBids": "Accept bids on offer?",
   "myInventory.whoShouldSee": "Who should see this offer?",
   "myInventory.listingShare": "Enable Listing Share for this offer?",
+  "myInventory.allSubtitle": "My Network + BluePallet Direct",
+  "myInventory.myNetworkOnly": "My Network Only",
+  "myInventory.myNetworkOnlySubtitle": "Members I'm Connected To",
+  "myInventory.bluePalletDirect": "BluePallet Direct",
+  "myInventory.bluePalletDirectSubtitle": "Open Marketplace",
   "sharedListings.internalProductName": "Internal Product Name",
   "sharedListings.seller": "Seller",
   "sharedListings.packaging": "Packaging",
