--- a/localization/en.json
+++ b/localization/en.json
@@ -1026,6 +1026,7 @@
   "global.palletPkgMax": "Pallet Pkg Max",
   "global.and": "and",
   "global.andSpaceAround": " and ",
+  "global.orSpaceAround": " or ",
   "global.companyGenericProductName": "Company Generic Product Name",
   "global.companyGenericProductCode": "Company Generic Product Code",
   "global.companyGenericProductNameOrCode": "Company Generic Product Name Or Code",
@@ -2814,6 +2815,8 @@
   "order.counterValue": "Counter Value",
   "order.attachments": "Attachments: ",
   "order.reasons": "Reasons:",
+  "order.view": "View",
+  "order.reviewResolutionDispute.description": "Please review the resolution to this dispute case and confirm that it is correct.",
   "order.viewRequesting": "Please view reasoning and images below.",
   "order.rejectOrder": "REJECT ORDED",
   "order.selectReason": "Please select the reason for rejecting this order",
@@ -3396,5 +3399,11 @@
   "operations.orders.detail.modal.creditOrder": "Credit Order",
   "operations.orders.detail.modal.rejectOrder": "Reject Order",
   "order.actionDisputed": "Order Disputed",
-  "order.actionDisputed.text": "This order has been disputed by the buyer and needs to be resolved. When ready enter the resolution here."
+  "order.actionDisputed.text": "This order has been disputed by the buyer and needs to be resolved. When ready enter the resolution here.",
+  "operations.orders.detail.modal.reason": "Reason:",
+  "orders.detail.modal.orderResolution.creditText": "After all parties have reviewed the disputed order it has been agreed upon that {Seller_Company} will credit {Credit_Amount} to {Buyer_Company} for Order {Order_ID}.",
+  "orders.detail.modal.orderResolution.rejectText": "After all parties have reviewed the disputed order it has been agreed upon that {Buyer_Company} will return the order {Order_ID} to {Seller_Company} and will receive a full refund. {Seller_Company} will take on the expense of both the original freight costs and the return freight costs.",
+  "orders.detail.modal.orderResolution.description": "After both parties accept this resolution will update the order invoice to reflect the credit issued. If a full payment has already occured, it will initiate a refund of the agreed amount to the purchaser. If any of this information is incorrect you may choose to reopen the case and a support specialist will contact you with the next steps.",
+  "orders.detail.modal.orderResolution.contact": "Feel free to reach out with any additional questions at ",
+  "dispute.reopend.success": "Case reopened, a support specialist will be in touch shortly."
 }
