DT-487 - changes for Map (Company Products)

--- a/localization/en.json
+++ b/localization/en.json
@@ -528,6 +528,11 @@
   "global.totalWeight": "Total Weight",
   "global.next": "Next",
   "global.freightClass": "Freight Class",
+  "global.palletSaleOnly": "Pallet Sale Only",
+  "global.packagingWidth": "Packaging Width",
+  "global.packagingLength": "Packaging Length",
+  "global.packagingHeight": "Packaging Height",
+  "global.packageWeightUnit": "Package Weight Unit",
   "global.docName": "Document Name",
   "global.docType": "Document Type",
   "global.doc": "Document",
