DT-478 - added new translation

--- a/localization/en.json
+++ b/localization/en.json
@@ -226,6 +226,7 @@
   "navigation.alerts.shippingQuoteRequest": "Shipping Quote Requests",
   "navigation.alerts.companyGenericProductRequests": "Product Requests",
   "navigation.alerts.disputes": "Order Disputes",
+  "navigation.alerts.warehouseVerification": "Warehouse Verification",
   "navigation.companies": "Companies",
   "navigation.dashboard": "Dashboard",
   "navigation.products": "Products",
