--- a/localization/en.json
+++ b/localization/en.json
@@ -3311,11 +3311,11 @@
   "detailRow.sds": "SDS",
   "detailRow.cofA": "C of A",
   "detailRow.orderTotal": "Order Total",
-  "detailRow.aggregateInsurance": "Insurance Requirements",
-  "detailRow.daysBeyond": "Days Beyond Term",
-  "detailRow.creditRisk": "Credit Risk",
+  "detailRow.aggregate_insurance": "Insurance Requirements",
+  "detailRow.days_beyond": "Days Beyond Term",
+  "detailRow.credit_risk": "Credit Risk",
   "detailRow.violations": "Legal & Financial Violations",
-  "detailRow.socialPresence": "Social Presence",
+  "detailRow.social_presence": "Social Presence",
   "broadcast.saveAsTemplate": "Save as Templates",
   "product.packaging.selectFirst": "Please select Packaging Unit",
   "inventory.modal.editListing": "Edit Listing",
