DT-505 Added Shipping quotes request datagrid in Operations.

--- a/localization/en.json
+++ b/localization/en.json
@@ -242,6 +242,7 @@
   "navigation.product-catalog": "Product Catalog",
   "navigation.product-groups": "Product Groups",
   "navigation.operations.shipping-quotes": "Shipping Quotes",
+  "navigation.operations.shipping-quote-requests": "Shipping Quote Requests",
   "navigation.operations.tags": "Tags",
   "navigation.operations.company-product-catalog": "Company Product Catalog",
   "navigation.operations.company-inventory": "Company Inventory",
@@ -2302,6 +2303,7 @@
   "operations.tables.shippingQuotes.buttonAdd": "Add Shipping Quote",
   "operations.tables.tags.buttonAdd": "Add Tag",
   "operations.tables.shippingQuotes.search": "Search shipping quote by ID",
+  "operations.tables.shippingQuoteRequests.search": "Search shipping quote requests by text",
   "operations.tables.tags.search": "Search tags",
   "operations.tables.companyProductCatalog.search": "Search product catalog by name, number ",
   "operations.tables.companyProductCatalog.SearchCompanyText": "Search product catalog by company",
@@ -2883,6 +2885,7 @@
   "title.products.casProducts": "CAS Products",
   "title.products.productCatalog": "Product Catalog",
   "title.products.productGroups": "Product Groups",
+  "title.operations.shippingQuoteRequests": "Shipping Quote Requests",
   "holds.intProductName": "Product Name",
   "holds.pkgsHeld": "Quantity",
   "holds.expirationTime": "Expires",
