DT-507 Adjusted Insurance page, added popups, endpoints.

--- a/localization/en.json
+++ b/localization/en.json
@@ -3422,6 +3422,13 @@
   "orders.detail.modal.orderResolution.contact": "Feel free to reach out with any additional questions at ",
   "dispute.reopend.success": "Case reopened, a support specialist will be in touch shortly.",
   "insurance.subTitle": "Add any Certificates of Insurance that you may have.",
+  "insurance.insurance": "Insurance",
+  "insurance.addYour": "Add Your {name} Insurance",
+  "insurance.insuranceType": "Insurance Type",
+  "insurance.selectInsuranceType": "Select Insurance Type",
+  "insurance.success": "Success!",
+  "insurance.yourInsuranceWillBe": "Your Insurance will be verified in 24-48 hours",
+  "insurance.close": "Close",
   "insurance.type": "TYPE",
   "insurance.carrier": "CARRIER",
   "insurance.coverage": "COVERAGE",
