DT-525 Added My TradePass Page.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2868,6 +2868,7 @@
   "title.settings.bank-accounts": "Bank Accounts",
   "title.settings.branches": "Branches",
   "title.settings.company-details": "Company Details",
+  "title.settings.myTradePass": "My TradePass",
   "title.settings.delivery-addresses": "Delivery Addresses",
   "title.settings.documents": "Documents",
   "title.settings.global-broadcast": "Global Price Book",
