DT-543 Password set/reset page update.

--- a/localization/en.json
+++ b/localization/en.json
@@ -611,6 +611,7 @@
   "global.currency": "Currency",
   "global.apply": "Apply",
   "global.continue": "Continue",
+  "global.signUp": "Sign up",
   "global.requestHold": "Request Hold",
   "global.roles": "Roles",
   "global.lastLogin": "Last Login",
@@ -2025,6 +2026,8 @@
   "verification.labels.password": "Password",
   "verification.labels.passwordConfirm": "Password Confirmation",
   "verification.nextStep": "Next Step",
+  "verification.termsText": "By signing up you agree to the {terms}",
+  "verification.termsAndConditions": "Terms and Conditions",
   "notifications.companyUpdated": "Company {name} succesfully updated.",
   "notifications.companyCreated": "Company {name} succesfully created.",
   "notifications.echoProductCreated.header": "Created Echo Product",
